erDiagram
    %% Graph Canvas Domain
    GRAPH ||--o{ NODE_ENTITY : contains
    GRAPH ||--o{ RELATIONSHIP_ENTITY : contains
    NODE_ENTITY ||--o{ PORT_ENTITY : exposes
    NODE_ENTITY ||--|| NODE_LAYOUT : positioned_by
    RELATIONSHIP_ENTITY }o--|| PORT_ENTITY : "from / to"

    %% Document AST Domain
    DOCUMENT_PAYLOAD ||--o{ BLOCK : contains
    DOCUMENT_PAYLOAD ||--o{ COMMENT : has
    BLOCK ||--o{ INLINE_RUN : renders
    BLOCK ||--o{ TABLE_ROW : organizes
    TABLE_ROW ||--o{ TABLE_CELL : contains
    TABLE_CELL ||--o{ INLINE_RUN : contains
    INLINE_RUN }o--o{ COMMENT : references

    %% Relational Knowledge Ledger Domain
    RELATIONAL_LEDGER_PAYLOAD ||--o{ RELATIONAL_LEDGER_ENTRY : contains
    RELATIONAL_LEDGER_ENTRY }o--|| BLOCK : grounded_by_claim
    INLINE_RUN ||--o| INLINE_CLAIM_BADGE : contains

    %% Unified Checkpoint & Ledger Domain
    CHECKPOINT_BUNDLE ||--o{ INSTANCE_RESTORE_POINT : captures
    CHECKPOINT_BUNDLE ||--|| CHAT_CHECKPOINT : references
    WORKSPACE_SNAPSHOT ||--|| INSTANCE_RESTORE_POINT : targets
    WORKSPACE_COMMAND_LOG ||--|| INSTANCE_LOG_POSITION : indexed_at

    %% Physical SQLite V7 True DAG & CAS Persistence Schema
    PROJECTS ||--o{ INSTANCES : owns
    PROJECTS ||--o{ CHAT_SESSIONS : contains
    CHAT_SESSIONS ||--o{ CHAT_MESSAGES : logs
    CHAT_SESSIONS ||--o| CHAT_MESSAGES : active_message
    CHAT_MESSAGES ||--o{ CHAT_MESSAGES : "parent / child DAG"
    CHAT_MESSAGES }o--o| LANGGRAPH_CHECKPOINTS : "checkpoint"
    CHAT_SESSIONS ||--o{ LARGE_TOOL_OUTPUTS : attaches
    INSTANCES ||--o{ WORKSPACE_SNAPSHOTS : captures
    INSTANCES ||--o{ WORKSPACE_COMMAND_LOGS : records
    WORKSPACE_BLOBS ||--o{ WORKSPACE_SNAPSHOTS : stores
    LANGGRAPH_CHECKPOINTS ||--o{ LANGGRAPH_CHECKPOINTS : parent_checkpoint
    LANGGRAPH_CHECKPOINTS ||--o{ LANGGRAPH_WRITES : produces

    %% Entity Definitions
    GRAPH {
        GraphId id PK
        Record nodesById
        Record relationshipsById
        Record layoutByNodeId
    }

    NODE_ENTITY {
        NodeId id PK
        string type "card"
        string name
        Record attrs "clusterId, clusterPath, tags"
    }

    PORT_ENTITY {
        PortId id PK
        Point relativePosition "x, y"
        Vector normalVector "x, y"
        string type "source | target | bi-directional"
    }

    NODE_LAYOUT {
        NodeId nodeId PK, FK
        number x
        number y
        number width
        number height
    }

    RELATIONSHIP_ENTITY {
        RelationshipId id PK
        Endpoint from "nodeId, portId"
        Endpoint to "nodeId, portId"
        Record attrs "label, weight, directional"
    }

    DOCUMENT_PAYLOAD {
        Block[] blocks
        Record comments
    }

    BLOCK {
        string id PK
        string type "h1|h2|paragraph|code|quote|table"
        string align "left|center|right|justify"
        string language
        InlineRun[] children
    }

    INLINE_RUN {
        string text
        boolean bold
        boolean italic
        string equation "LaTeX Formula"
        string[] commentIds FK
        InlineClaimBadge claimBadge
    }

    RELATIONAL_LEDGER_PAYLOAD {
        string instanceId PK
        RelationalLedgerEntry[] entries
    }

    RELATIONAL_LEDGER_ENTRY {
        string id PK
        string sourceEntityId FK
        string targetEntityId FK
        string rel
        string provenance
        Anchor anchor
        string status "active | retracted | disputed"
    }

    INLINE_CLAIM_BADGE {
        string claimId PK
        string quote
        string sourceDocId FK
        string blockId FK
    }

    CHECKPOINT_BUNDLE {
        string id PK
        string sessionId FK
        string threadId FK
        string projectId FK
        string parentBundleId FK
        string branchName
        string agentCheckpointId FK
        string chatMessageId FK
        string createdAt
        string reason "auto | restore"
        string label
    }

    INSTANCE_RESTORE_POINT {
        string instanceId PK
        string instanceType "graph-canvas | document | ledger"
        string snapshotId FK
        string blobHash FK
        integer sequenceNumber
        int[] agentSeqs
        InstanceLogPosition targetCursor
    }

    WORKSPACE_COMMAND_LOG {
        string instanceId PK
        InstanceLogPosition cursor
        string source "ui | agent | sync"
        Command command
        Record previousState
    }

    %% Physical SQLite V7 Table Schemas
    PROJECTS {
        string id PK
        string name
        string metadata_json
        integer created_at
        integer updated_at
    }

    INSTANCES {
        string id PK
        string project_id FK
        string type "document | canvas | ledger"
        string name
        blob content_msgpack "MessagePack binary"
        string metadata_json
        string created_at
        string updated_at
    }

    CHAT_SESSIONS {
        string id PK
        string project_id FK
        string title
        integer created_at
        integer updated_at
        string active_message_id FK
        string active_checkpoint_id FK
    }

    CHAT_MESSAGES {
        string id PK
        string session_id FK
        string role "user | assistant | system"
        string content
        string tool_calls_json
        string blocks_json
        string actions_json
        string usage_json
        string metadata_json
        integer timestamp
        string parent_message_id FK
        string checkpoint_id FK
        string branch_id
    }

    LANGGRAPH_CHECKPOINTS {
        string thread_id PK
        string checkpoint_ns PK
        string checkpoint_id PK
        string parent_checkpoint_id FK
        string checkpoint_json "Self-contained complete channel_values snapshot"
        string metadata_json
        integer created_at
    }

    LANGGRAPH_BLOBS {
        string thread_id PK
        string checkpoint_ns PK
        string channel PK
        string version PK
        string type
        blob data_blob "Serialized payload"
        integer serialized
    }

    LANGGRAPH_WRITES {
        string thread_id PK
        string checkpoint_ns PK
        string checkpoint_id PK
        string task_id PK
        integer idx PK
        string channel
        string type
        string blob_json
    }

    LANGGRAPH_RESTORE_HEADS {
        string thread_id PK
        string checkpoint_ns PK
        string checkpoint_id
        integer updated_at
    }

    WORKSPACE_BLOBS {
        string hash PK
        blob content_msgpack "Immutable MessagePack payload"
        integer byte_size
        string created_at
    }

    WORKSPACE_SNAPSHOTS {
        string id PK
        string instance_id FK
        string project_id FK
        string instance_type
        string snapshot_ref
        string snapshot_hash
        string blob_hash FK
        string snapshot_cursor_json
        blob snapshot_msgpack "Legacy fallback payload"
        string created_at
    }

    WORKSPACE_COMMAND_LOGS {
        integer log_id PK
        string instance_id FK
        string command_id
        string command_type
        string payload_json
        integer timestamp
    }

    FILE_REVISIONS {
        string id PK
        string name
        string description
        string snapshot_ref FK
        string created_at
    }

    LARGE_TOOL_OUTPUTS {
        string id PK
        string session_id FK
        blob content_blob "Evicted output"
        integer byte_size
        integer created_at
    }
